--- a/resources/assets/css/creative.css
+++ b/resources/assets/css/creative.css
@@ -488,3 +488,74 @@ body {
   z-index:10000;
   position:relative;
 }
+
+.login-square{
+  padding:10px;
+  padding-top:30px;
+  padding-bottom:20px;
+  background:#ffffff;
+  box-shadow:2px 2px 5px #444;
+  color:#000;
+}
+.login-square hr{
+  margin-top:0;
+}
+@media screen and (max-width: 767px) {
+  .login-square{
+    margin-top:30px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .pay-logo{
+    display:none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .pay-logo{
+    display:inherit;
+  }
+  .pay-form{
+    margin-top:30px;
+  }
+}
+.main-container{
+  height:100vh;
+  overflow:hidden;
+  padding-top:29vh;
+}
+.pay-form h1,h2,h3,h4,h5,h6,label{
+  color:#555;
+  margin-top:0;
+  margin-bottom:23px;
+}
+.pay-logo{
+  width:27px;
+  margin:0;
+  margin-top:1px;
+  float:left;
+}
+.logo-name{
+  float:left;
+  margin:0;
+  margin-left:3px;
+}
+.price{
+  font-weight:600;
+}
+.payment-description{
+  color:#555;
+  border-radius:3px;
+  box-shadow:0px 2px 1px #eee;
+  padding:20px;
+  padding-bottom:0;
+  padding-top:0;
+}
+.boldy{
+  font-weight: 600;
+}
+.hr-1{
+  max-width:100%;
+  border-color:#ddd;
+  border-width:1px;
+  margin-bottom:10px;
+}
