--- a/resources/assets/css/creative.css
+++ b/resources/assets/css/creative.css
@@ -331,7 +331,7 @@ header .header-content .header-content-inner p {
 }
 .btn-default {
   color: #222222;
-  background-color: white;
+  background-color: #eee;
   border-color: white;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -523,10 +523,17 @@ body {
   overflow:hidden;
   padding-top:29vh;
 }
-.pay-form h1,h2,h3,h4,h5,h6,label{
-  color:#555;
-  margin-top:0;
-  margin-bottom:23px;
+.pay-form h1,
+.pay-form h2,
+.pay-form h3,
+.pay-form h4,
+.pay-form h5,
+.pay-form h6,
+.pay-form label{
+    color:#555;
+    margin-top:0;
+    margin-bottom:23px;
+  
 }
 .pay-logo{
   width:27px;
