--- a/resources/assets/css/creative.css
+++ b/resources/assets/css/creative.css
@@ -13,7 +13,7 @@ body {
   /*font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;*/
 }
 hr {
-  border-color: #8c44d5;
+  border-color: #0f1121;
   border-width: 3px;
   max-width: 50px;
 }
@@ -24,11 +24,11 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #8c44d5;
+  color: #373f7b;
 }
 a:hover,
 a:focus {
-  color: #592191;
+  color: #0f1121;
 }
 h1,
 h2,
@@ -44,20 +44,29 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #8c44d5;
+  background-color: #0f1121;
+}
+.bg-logo{
+  background: #0f1121 url(/img/bg-logo-dark.png) no-repeat 110% 75%;
+  background-size: 800px auto;
+}
+.bg-logo-2{
+  background: #0f1121 url(/img/bg-logo-dark.png) no-repeat -110% -75%;
+  background-size: 800px auto;
+  color:#fff;
 }
 .bg-dark {
   background-color: #222222;
   background-position: center;
-  background-image: url('../img/header9.jpg');
+  background-image: url('../img/header5.jpg');
   background-attachment: fixed;
   color: white;
 }
 .bg-dark-2 {
-  background-color: #222222;
+  background-color: #f1f4f6;
   background-position: center;
   padding:50px;
-  color: white;
+  color: #778b99;
 }
 @media screen and (max-width: 767px) {
   .bg-dark-2{
@@ -82,28 +91,35 @@ aside {
 .no-padding {
   padding: 0;
 }
+.nav-logo{
+  height:100%;
+  width:auto;
+}
+.navbar-brand{
+  padding:0;
+}
 .navbar-default {
-  background-color: white;
-  border-color: rgba(34, 34, 34, 0.05);
+  background-color: #0f1121;
+  border-color: rgba(1, 0, 52, 0.05);
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #8c44d5;
+  color: #0f1121;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #592191;
+  color: #373f7b;
 }
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
   font-size: 12px;
-  color: #222222;
+  color: #ffffff;
   text-transform: uppercase;
 }
 .navbar-default .nav > li > a,
@@ -111,15 +127,15 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #222222;
+  color: #eb8721;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #8c44d5;
+  color: #eb8721;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #8c44d5 !important;
+  color: #eb8721 !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -127,10 +143,6 @@ aside {
   background-color: transparent;
 }
 @media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.3);
-  }
   .navbar-default .navbar-header .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
   }
@@ -140,31 +152,31 @@ aside {
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: white;
   }
   .navbar-default .nav > li > a:hover,
   .navbar-default .nav > li > a:focus:hover {
-    color: white;
+    color: #eb8721;
   }
   .navbar-default.affix {
-    background-color: white;
+    background-color: #0f1121;
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #8c44d5;
+    color: #0f1121;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #592191;
+    color: #373f7b;
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: #222222;
+    color: #ffffff;
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #8c44d5;
+    color: #eb8721;
   }
 }
 header {
@@ -176,7 +188,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header9.jpg');
+  background-image: url('../img/header5.jpg');
   background-attachment: fixed;
   text-align: center;
   color: white;
@@ -252,6 +264,14 @@ header .header-content .header-content-inner p {
 }
 .section-heading {
   margin-top: 0;
+  color:#ffffff;
+}
+.section-heading-dark{
+  margin-top:0;
+  color:#0f1121;
+}
+#services{
+  background: url(/img/bg-logo-dark.png) -150% -600% no-repeat;
 }
 .service-box {
   max-width: 400px;
@@ -323,7 +343,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #8c44d5;
+  color: #373f7b;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -379,8 +399,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: white;
-  background-color: #8c44d5;
-  border-color: #8c44d5;
+  background-color: #373f7b;
+  border-color: #373f7b;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -392,8 +412,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #592191;
-  border-color: #592191;
+  background-color: #0f1121;
+  border-color: #0f1121;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -418,11 +438,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #8c44d5;
-  border-color: #8c44d5;
+  background-color: #0f1121;
+  border-color: #0f1121;
 }
 .btn-primary .badge {
-  color: #8c44d5;
+  color: #0f1121;
   background-color: white;
 }
 .btn {
@@ -463,32 +483,34 @@ body {
     color: #fff;
     margin: 10px;
     padding:20px;
-    background: #111;
+    background: #202446;
     border-radius:5px;
+}
+.elem a{
+  color: #616bb8 !important;
 }
 #lost_id{
   font-size:10px;
 }
 .landing{
-  margin:0;
-  width:100%;
-  height:100%;
-  padding:0;
+    margin:0;
+    width:100%;
+    height:100%;
+    padding:0;
 }
 .transition-overlay{
-  background:#592191;
-  text-align:center;
-  color:#fff;
-  height:100vh;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-  font-size:30px;
-  font-weight:300;
-  /*line-height:95vh;*/
-  padding-top:40vh;
-  z-index:10000;
-  position:relative;
+    background:#0f1121;
+    text-align:center;
+    color:#fff;
+    height:100vh;
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+    font-size:30px;
+    font-weight:300;
+    /*line-height:95vh;*/
+    padding-top:40vh;
+    z-index:10000;
+    position:relative;
 }
-
 .login-square{
   padding:10px;
   padding-top:30px;
