--- a/resources/assets/css/creative.css
+++ b/resources/assets/css/creative.css
@@ -13,7 +13,7 @@ body {
   /*font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;*/
 }
 hr {
-  border-color: #0f1121;
+  border-color: #010034;
   border-width: 3px;
   max-width: 50px;
 }
@@ -24,11 +24,11 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #373f7b;
+  color: #040150;
 }
 a:hover,
 a:focus {
-  color: #0f1121;
+  color: #010034;
 }
 h1,
 h2,
@@ -44,14 +44,14 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #0f1121;
+  background-color: #010034;
 }
 .bg-logo{
-  background: #0f1121 url(/img/bg-logo-dark.png) no-repeat 110% 75%;
+  background: #010034 url(/img/bg-logo-dark.png) no-repeat 110% 75%;
   background-size: 800px auto;
 }
 .bg-logo-2{
-  background: #0f1121 url(/img/bg-logo-dark.png) no-repeat -110% -75%;
+  background: #010034 url(/img/bg-logo-dark.png) no-repeat -110% -75%;
   background-size: 800px auto;
   color:#fff;
 }
@@ -80,7 +80,7 @@ p {
   }
 }
 .text-faded {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.3);
 }
 section {
   padding: 100px 0;
@@ -99,7 +99,7 @@ aside {
   padding:0;
 }
 .navbar-default {
-  background-color: #0f1121;
+  background-color: #010034;
   border-color: rgba(1, 0, 52, 0.05);
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.35s;
@@ -107,14 +107,14 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #0f1121;
+  color: #010034;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #373f7b;
+  color: #040150;
 }
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
@@ -159,16 +159,16 @@ aside {
     color: #eb8721;
   }
   .navbar-default.affix {
-    background-color: #0f1121;
+    background-color: #010034;
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #0f1121;
+    color: #010034;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #373f7b;
+    color: #040150;
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
@@ -268,7 +268,7 @@ header .header-content .header-content-inner p {
 }
 .section-heading-dark{
   margin-top:0;
-  color:#0f1121;
+  color:#010034;
 }
 #services{
   background: url(/img/bg-logo-dark.png) -150% -600% no-repeat;
@@ -343,7 +343,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #373f7b;
+  color: #040150;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -399,8 +399,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: white;
-  background-color: #373f7b;
-  border-color: #373f7b;
+  background-color: #040150;
+  border-color: #040150;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -412,8 +412,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #0f1121;
-  border-color: #0f1121;
+  background-color: #010034;
+  border-color: #010034;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -438,11 +438,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #0f1121;
-  border-color: #0f1121;
+  background-color: #010034;
+  border-color: #010034;
 }
 .btn-primary .badge {
-  color: #0f1121;
+  color: #010034;
   background-color: white;
 }
 .btn {
@@ -499,7 +499,7 @@ body {
     padding:0;
 }
 .transition-overlay{
-    background:#0f1121;
+    background:#010034;
     text-align:center;
     color:#fff;
     height:100vh;
